--- a/recipe_page/main.css
+++ b/recipe_page/main.css
@@ -1,5 +1,10 @@
 body {
     background: url(images/vegetable-pattern.png) repeat center;
+    
+    font-family: monarcha, serif;
+    font-weight: 400;
+    font-style: normal;
+    color: darkslategray;
 }
 
 #wrapper {
@@ -10,7 +15,7 @@ body {
     max-width: 95%;
     margin: auto;
     padding: 1em;
-    background-color: rgb(255, 191, 128, 0.9);
+    background-color: rgb(255, 191, 128, 0.95);
 }
 
 #hero {
@@ -21,25 +26,55 @@ body {
 }
 
 h1 {
+    margin: .5em auto .25em auto;
+    
     font-family: gloss-drop, cursive;
     font-weight: 400;
     font-style: normal;
     font-size: 4em;
     
+    line-height: 1em;
     text-align: center;
 }
 
 p {
+    margin: auto;
+    max-width: 75%;
+    
     font-family: grandma, sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     font-style: normal;
-    font-size: 1.25em;
+    font-size: 1.45em;
+    
+    text-align: center;
+}
+
+ul,
+ol {
+    list-style-position: outside;
+    align-content: space-between;
+}
+
+li {
+    padding: .25em 0em;
+}
+
+.recipe {
+    
 }
 
 #ingredients {
-    
-}
+    display: block;
+    box-sizing: border-box;
+    float: left;
+    max-width: 50%;
+    padding 2em;
+} 
 
 #instructions {
-    
+    display: block;
+    box-sizing: border-box;
+    float: left;
+    max-width: 50%;
+    padding 2em;
 }
