--- a/portfolio-page/main.css
+++ b/portfolio-page/main.css
@@ -12,6 +12,7 @@ html {
     background-color: darkslategray;
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* SCROLLBAR EDITS */
@@ -39,6 +40,8 @@ body {
 }
 
 pagetitle {
+    max-height: 2em;
+    
     font-size: 6em;
     font-family: ht-neon, sans-serif;
     font-weight: 400;
@@ -48,6 +51,11 @@ pagetitle {
     
     color: floralwhite;
     text-shadow: 0em 0em .075em #8C633F;
+}
+
+p {
+    color: #5ED4B8;
+    padding: .5em;
 }
 
 h2 {
@@ -109,11 +117,12 @@ h2 {
     
 
     grid-template-rows: auto auto auto auto;
-    grid-template-columns: auto 50% auto;
+    grid-template-columns: 100%;
     grid-gap: 1em;
     justify-content: space-between;
     align-content: space-between;
     
+    filter: drop-shadow(.25em .25em .25em rgba(26, 26, 26, 1));
 }
 
 #website-gall {
@@ -126,58 +135,63 @@ h2 {
     grid-row: 2;
 }
 
-/* PROJECT ITEMS' GRID PLACEMENT */
+/* project items grid placements */
 .gall-label {
-    grid-column: 1 / span 2;
     grid-row: 1;
 }
 #app1 {
-    grid-column: 2 / span 2;
     grid-row: 2;
 }
 #app2 {
-    grid-column: 1 / span 2;
     grid-row: 3;
 }
 #app3 {
-    grid-column: 2 / span 2;
     grid-row: 4;
 }
 #web1 {
-    grid-column: 2 / span 2;
     grid-row: 2;
 }
 #web2 {
-    grid-column: 1 / span 2;
     grid-row: 3;
 }
 #web3 {
-    grid-column: 2 / span 2;
     grid-row: 4;
 }
 #web4 {
-    grid-column: 1 / span 2;
     grid-row: 5;
 }
 
-.project{
+.project {
     box-sizing: border-box;
     margin: auto;
     min-height: 20em;
-    min-width: 100%;
+    min-width: 90%;
+    max-width: 100%;
     
-    background-clip: border-box;
     background-position: center;
     background-size: 200%;
     
-    box-shadow: .25em .25em .5em black;
+}
+
+/* project clip shapes */
+.proj-odd {
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+}
+.proj-even {
+    clip-path: polygon(0% 0%, 75% 0%, 100% 100%, 25% 100%);
+}
+
+
+/* project modal pop-ups */
+
+.modal {
 }
 
 .projectdesc {
     
 }
 
-/* ORIGINAL PROJECTS */
+/* ORIGINAL PROJECTS SECTION -- WILL PROBABLY DELETE */
 /*
 #gallery {
     display: block;
@@ -217,6 +231,15 @@ h2 {
     max-width: 70%;
 }
 
+#contact button {
+    background: none;
+    border: none;
+}
+
+#contact-form {
+    display: none;
+}
+
 /* FOOTER */
 .soc-button {
     margin: auto;
@@ -240,16 +263,17 @@ h2 {
 
 /* DESKTOP */
 
-@media (min-width: 700px){
+@media (min-width: 800px){
     pagetitle {
+        z-index: 2;
         font-size: 3em;
     }
     
     #wrapper {
         display: grid;
         
-        grid-template-columns: auto  45%;
-        grid-template-rows: 20% auto auto;
+        grid-template-columns: auto auto  25%;
+        grid-template-rows: auto auto auto;
     }
     
     #gallery pagetitle {
@@ -258,64 +282,80 @@ h2 {
     
     #gallery {
         min-width: 100%;
-        grid-column: 1;
-        grid-row: 1 / span 3;
+        grid-column: 1 / span 2;
+        grid-row: 1;
         
-        grid-template-columns: auto;
+        grid-template-columns: auto auto;
         grid-template-rows: auto auto;
-        grid-template-areas: 'title' 'webGall' 'appGall';
+        grid-template-areas: 'title .' 'webGall appGall';
         grid-gap: 1em;
     }
     
     #website-gall {
-        grid-row: 2;ß
+        grid-column: 1;
+        grid-row: 2;
     }
     
     #app-gall {
-        grid-row: 3; 
+        grid-column: 2;
+        grid-row: 2; 
+    }
+    
+    .projectsect {
+        grid-template-rows: 2em auto auto auto;
+        
+        max-height: 100%;
+        align-content: center;
+        
     }
     
     .project {
-        min-height: 10vw;
+        min-width: 100%;
+        min-height: 10em;
     }
     
     #about {
-        grid-column: 2;
+        grid-column: 3;
         grid-row: 1;
         
-        display: grid;
-        grid-column-gap: .5em;
-        grid-template-columns: 45% 55%;
-        grid-template-rows: 25% auto;
-        justify-content: space-around;
+        display: block;
     }
     
     #profilepic {
-        box-sizing: border-box;
-        grid-column: 1;
-        grid-row: 2;
+        position: relative;
+        z-index: 0;
+        
         max-width: 100%;
         
-        
-        transform: scale(.5);
+        grid-column: 1;
+        grid-row: 2;
     }
     
     #about pagetitle {
-        grid-column: 1/ span 2;
+        grid-column: 1 / span 2;
         grid-row: 1;
-        max-height: 500px;
     }
     
     #profiletext{
-        grid-column: 2;
-        grid-row: 2;
-        max-width: 80%;
-        max-height: 100%;
+        position: relative;
+        z-index: 1;
+        
+        grid-column: 1;
+        grid-row: 3 / span 2;
+        
+        width: 100%;
+        max-height: 30%;
+        margin: auto; 
+        
         overflow-y: scroll;
+        
+        border-radius: 1em 1em 1em;
+        
+        background-color: rgba(0, 0, 0, .5)
     }
     
     #contact {
         grid-column: 2;
-        grid-row: 2;
+        grid-row: 3;
     }
 }
