--- a/eventonica/main.css
+++ b/eventonica/main.css
@@ -1,15 +1,24 @@
-/* COLORS */
+/* -- GENERAL STYLING --*/
 
-/*
-.eventonica-1-rgba { color: rgba(32, 36, 38, 1); }
-.eventonica-2-rgba { color: rgba(39, 107, 140, 1); }
-.eventonica-3-rgba { color: rgba(31, 169, 219, 1); }
-.eventonica-4-rgba { color: rgba(22, 196, 242, 1); }
-.eventonica-5-rgba { color: rgba(186, 245, 255, 1); }
-*/
+/* PAGE SCROLLBAR */
+body::-webkit-scrollbar {
+    width: 1em;
+
+    background-color: #262626;
+}
+ 
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+    border-radius: 1rem 1rem 1rem;
+
+    background-color: rgba(44, 241, 204, .4);
+}
 
 body {
-    background: linear-gradient(to bottom, rgba(32, 36, 38, .5), rgba(32, 36, 38, .75)), url("graphics/cityscape.jpeg") no-repeat center fixed;
+    background: linear-gradient(to bottom, rgba(32, 36, 38, .75), rgba(32, 36, 38, .85)), url("graphics/cityscape.jpeg") no-repeat center fixed;
     background-attachment: fixed;
     background-size: cover, cover;
     background-blend-mode: normal;
@@ -20,7 +29,7 @@ body {
 header {
     max-width: 90%;
     margin: auto;
-    filter: drop-shadow(0rem 0rem .25em #1FA9DB);
+    
 }
 
 main {
@@ -29,37 +38,101 @@ main {
 
 h1 {
     
-    color: #BAF5FF;
+    color: #fbbf62;
+    filter: drop-shadow(0rem 0rem .25rem #F2884B);
 
     font-family: 'Dosis', sans-serif;
     font-weight: 300;
     font-size: 6rem;
 }
 
-h2{
-    max-width: 90%;
-    margin: auto;
-    
-    color: rgba(31, 169, 219, 1);
+h2{ 
+    color: #32d5db;
     
     font-family: 'Dosis', sans-serif;
     font-weight: 400;
     font-size: 2.5rem;
 }
 
-h3{
+h3 {
+    padding: 0rem 1rem;
+    
+    border-width: 3px;
+    border-style: solid;
+    border-image: 
+    linear-gradient(
+      to bottom, 
+      #F2884B, 
+      rgba(0, 0, 0, 0)
+    ) 1 100%;
+}
+
+h3,
+label{
     font-family: 'Dosis', sans-serif;
     font-weight: 500;
     font-size: 1.5rem;
+    
+    color: #F2884B;
+    text-shadow: 0rem 0rem .25rem rgba(32, 36, 38, 1);
 }
 
-h4.eventName{
-    font-family: 'Dosis', sans-serif;
-    font-weight: 500;
-    font-size: 1.4rem;
+h4 {
+    color: #32d5db;
+}
+
+p{
+    color: #2cf1cc;
+}
+
+/* PARAGRAPH SCROLLBARS */
+
+p::-webkit-scrollbar {
+    width: .25rem;
+    margin-right: 1rem;
+
+    background-image: linear-gradient(
+      to bottom, 
+      #2cf1cc, 
+      rgba(0, 0, 0, 0) 100%);
+}
+ 
+p::-webkit-scrollbar-track {
+    /*background: linear-gradient(
+      to bottom, 
+      #2cf1cc, 
+      rgba(0, 0, 0, 0)
+    ) 1 100%);*/
+}
+ 
+p::-webkit-scrollbar-thumb {
+    border-radius: 1rem 1rem 1rem;
+
+    background-color: rgba(44, 241, 204, .4);
+    border-style: solid;
+    border-width: .0625rem;
+    border-color: rgba(44, 241, 204, 1);
+    box-shadow: inset 0rem 0rem .25rem rgba(26, 26, 26, .5);
 }
 
 /* BOARD */
+.tableTitle{
+    position: relative;
+    z-index: 2;
+    box-sizing: border-box;
+    width: 95%;
+    margin: auto;
+    margin-top: 2rem;
+    padding: 1rem;
+    
+    background: linear-gradient(to bottom, rgba(54, 54, 54, 0.8) 0%, rgba(26, 26, 26, .9) 25%, rgba(26, 26, 26, .9) 75%, rgba(54, 54, 54, .125) 150%), linear-gradient(#F2884B 15%, #1FA9DB, #F2884B);
+    background-blend-mode: normal, normal;
+    text-shadow: .3rem .3rem .35rem rgba( 186, 245, 255, .25);
+    filter: drop-shadow(0rem 0rem .125rem #000);
+    
+    text-align: center;
+}
+
 table {
     display: table;
     width: 95%;
@@ -73,7 +146,7 @@ table {
     background-color: rgba(186, 245, 255, .125);
     backdrop-filter: blur(5px);
     box-shadow: inset 0 0 3rem rgba(186, 245, 255, .25);
-    color: #88F0DC;
+    
 }
 
 thead {
@@ -84,11 +157,7 @@ thead {
 
 th {
     margin: auto;
-    padding: 1rem;
     
-    
-    color: aliceblue;
-    text-shadow: 0rem 0rem .25rem rgba(32, 36, 38, 1);
 }
 
 tbody {
@@ -114,17 +183,19 @@ td {
 
 img.notFave {
     display: block;
-    max-width: 25%;
+    max-width: 90%;
     margin: auto;
 }
 
 /* Table Dates */
+td.category,
 td.date {
     text-align: center;
 }
 
 h4.eventDay {
     font-style: oblique;
+    
 }
 
 h4.eventDate {
@@ -139,15 +210,78 @@ h4.eventYear {
     text-align: center;
 }
 
+/* Event Info */
+
+
+h4.eventName{
+    color: #32d5db;
+    
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500;
+    font-size: 1.4rem;
+}
+
+.eventDescription {
+    max-height: 5rem;
+    padding: 0rem .5rem;
+    
+    overflow-y: auto;
+    
+    border-left-width: .25rem;
+    border-left-style: solid;
+    border-image: 
+    linear-gradient(
+      to bottom, 
+      #2cf1cc, 
+      rgba(0, 0, 0, 0)
+    ) 1 100%;
+}
+
+.category{
+    color: #2cf1cc;
+}
+
+/*Users Table Specs*/
+.userid {
+    color: #2cf1cc; 
+    
+    text-align: center;
+}
+
+ul.listOfFaves {
+    list-style: '♡' outside;
+    color: #2cf1cc;
+    
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+}
+
+.listOfFaves li {
+    padding: .125rem .75rem;
+}
 
 /*ADD EVENT FORM*/
+.tableTitle button{
+    padding: 0rem;
+    
+    background: none;
+    
+    font: inherit;
+    text-shadow: inherit;
+    
+    border-style: none;
+    border-bottom: .0625rem dashed;
+}
+
 form {
-    display: grid;
-    max-width: 80%;
-    margin: 3rem auto;
+    display: none;
+    box-sizing: border-box;
+    width: 95%;
+    margin: auto;
     padding: 1rem;
     
-    grid-template-columns: 20% auto auto;
+    grid-template-columns: 35% auto auto;
     grid-template-rows: auto auto;
     
     
@@ -156,13 +290,30 @@ form {
     box-shadow: inset 0 0 3rem rgba(186, 245, 255, .25);
 }
 
+
 label {
     grid-column: 1;
+    
+    text-align: right;
 }
 
 input,
-textarea,
-button {
+textarea{
     margin: auto auto auto 1rem;
     grid-column: 2 / span 2;
+    
+    background-color: #262626;
+    color: #2cf1cc;
+}
+
+button {
+    padding: .25rem 1rem;
+    margin: .75rem auto;
+    grid-column: 1 / span 3;
+    
+    color: #32d5db; background-color: #262626;
+    
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
 }
